<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.darmstadt.tu.kom.app.AppModesActivity" >

    <TextView
        android:id="@+id/displaylistenertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_listner_mode_message" />

	<Button
	    android:id="@+id/startBroadcasting"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="doBroadcastAudio"
	    android:text="@string/press_broadcast" />

	<Button
	    android:id="@+id/recordDummyButton"
	    android:layout_width="157dp"
	    android:layout_height="wrap_content"
	    android:text="@string/recordDummyButton" />

</LinearLayout>
